--- a/Tooltip/wally.toml
+++ b/Tooltip/wally.toml
@@ -1,6 +1,7 @@
 [package]
 name = "bdidk235/tooltip"
-version = "1.0.0"
+description = "A basic text tooltip that that follows your mouse."
+version = "1.0.1"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 exclude = ["**"]
