--- a/aftman.toml
+++ b/aftman.toml
@@ -3,4 +3,4 @@ rojo = "rojo-rbx/rojo@7.4.1"
 wally = "upliftgames/wally@0.3.1"
 wally-package-types = "JohnnyMorganz/wally-package-types@1.3.1"
 selene = "kampfkarren/selene@0.27.1"
-StyLua = "JohnnyMorganz/StyLua@0.20.0"
+stylua = "JohnnyMorganz/StyLua@0.20.0"
