Tooltip Update and Cmdr Types fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
 	"editor.insertSpaces": false,
-	"editor.formatOnSave": false,
+	"editor.formatOnSave": true,
 	"files.eol": "\n",
+	"luau-lsp.ignoreGlobs": [
+		"**/_Index/**",
+	],
+	"luau-lsp.diagnostics.strictDatamodelTypes": true,
+	"luau-lsp.diagnostics.workspace": true,
+	"luau-lsp.fflags.enableByDefault": true,
 	"[lua]": {
 		"editor.defaultFormatter": "JohnnyMorganz.stylua"
 	},
