--- a/aftman.toml
+++ b/aftman.toml
@@ -1,6 +1,7 @@
 [tools]
-rojo = "rojo-rbx/rojo@7.4.1"
+rojo = "rojo-rbx/rojo@7.4.4"
 wally = "upliftgames/wally@0.3.1"
-wally-package-types = "JohnnyMorganz/wally-package-types@1.3.1"
+wally-package-types = "JohnnyMorganz/wally-package-types@1.3.2"
+luau-lsp = "JohnnyMorganz/luau-lsp@1.32.3"
 selene = "kampfkarren/selene@0.27.1"
 stylua = "JohnnyMorganz/StyLua@0.20.0"
